--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,41 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Terren</title>
+    <!-- <style>
+      .loading {
+        -webkit-animation: scaleout 1s infinite ease-in-out;
+        animation: scaleout 1s infinite ease-in-out;
+        background-color: #222222;
+        border-radius: 100%;
+        height: 6rem;
+        width: 6rem;
+      }
+      #spinner {
+        align-items: center;
+        background-color: #f1f1f1;
+        display: flex;
+        height: 100vh;
+        justify-content: center;
+        width: 100vw;
+      }
+      @keyframes scaleout {
+        0% {
+          -webkit-transform: scale(0);
+          transform: scale(0);
+        }
+        100% {
+          -webkit-transform: scale(1);
+          transform: scale(1);
+          opacity: 0.5;
+        }
+      }
+    </style> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="spinner">
+      <div class="loading"></div>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
